--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "install": "^0.13.0",
     "moment": "^2.24.0",
+    "npm": "^6.14.2",
     "react": "^16.13.0",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
