--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "install": "^0.13.0",
     "moment": "^2.24.0",
     "npm": "^6.14.2",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.13.0",
-    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
